Errors fixed, 5 pm, coming back after the """quick""" break